@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-08-20T01:23:43Z",
+  "timestamp" : "2024-08-22T01:25:48Z",
   "count_outdated" : 797,
   "uniques_outdated" : 407,
-  "count" : 798,
-  "uniques" : 408,
+  "count" : 799,
+  "uniques" : 409,
   "clones" : [
     {
       "timestamp": "2024-08-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-08-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
